--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "build:watch": "webpack --watch --config webpack.config.js "
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gndx/js-portfolio.git"
+    "type": ,
+    "url": 
   },
   "keywords": [
     "javascript",
     "html",
     "css"
   ],
-  "author": "oscar barajas <oscar@gndx.dev>",
-  "license": "MIT",
+  "author": "kevin",
+  "license": ,
   "bugs": {
-    "url": "https://github.com/gndx/js-portfolio/issues"
+    "url": 
   },
-  "homepage": "https://github.com/gndx/js-portfolio#readme",
+  "homepage": ,
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@babel/plugin-transform-runtime": "^7.13.15",
